# AppDevProject

./: Account.py  Customer.py  Feedback.py  Forms.py  Irfan.py  Khei.py  MingXuan.py  Order.py  Product.py  Stores.py  XinHui.py  count.db.bak  main.py  products.db.db  pyproject.toml  requirements.txt  storage.db.db  storage.db.dir
env/Scripts/: activate  activate.bat
templates/: Cart.html  allProducts.html  base.html  changepassword.html  checkOut.html  chooseentryrecord.html  createApplication.html  createProduct.html  createemployee.html  dashboard.html  editprofile.html  editschedule.html  entryrecords.html  errorPage.html  feedback.html  feedback_ack.html  forgotpassword.html  home.html  individual.html  login.html  manageemployees.html  manageusers.html  order_instocks.html  register.html  showstorecount.html  storecount.html  storeentry.html  storeexit.html  thankyou.html  updateApplicants.html  updateOrder.html  updateProduct.html  updateSupplierOrder.html  updatecustomer.html  users.html  viewApplicants.html  viewFeedback.html  viewOrder.html  viewProduct.html  viewSupplierOrders.html
templates/includes/: navbar.html
