[tool.poetry]
name = "appdevproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
phonenumbers = "^8.12.16"
wtforms = "^2.3.3"
flask = "^1.1.2"
order = "^1.3.3"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
